--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,5 +4,6 @@ $formula-height:24px;
 $info-cell-width:40px;
 $row-height:24px;
 $cell-width:120px;
-$db-header-height:64px;
+$db-header-height:64px; 
 $border-color:#c0c0c0;
+$primary-color:#3c74ff;
