--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -1,22 +1,23 @@
 @import "variables";
 @import "mixins";
 
-.excel__table{
+.excel__table {
   position: absolute;
   left: 0;
   right: 0;
-  top: $header-height+$toolbar-height+$formula-height;
+  top: $header-height + $toolbar-height + $formula-height;
   overflow-x: auto;
-  padding-bottom: 2px; 
+  padding-bottom: 2px;
 
-  .row{
+  .row {
     display: flex;
     flex-direction: row;
     min-height: 20px;
     height: $row-height;
   }
 
-  .row-info{
+  .row-info {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,14 +26,14 @@
     border: 1px solid $border-color;
     background: #f8f9fa;
     border-top: none;
-    position: relative;
   }
 
-  .row-data{
+  .row-data {
     display: flex;
   }
 
-  .column{
+  .column {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,58 +41,60 @@
     min-width: 40px;
     width: $cell-width;
     border: 1px solid $border-color;
-    height: 100%;
     border-top: 0;
     border-left: 0;
-    position: relative;
+    height: 100%;
   }
 
-  .cell{
+  .cell {
     min-width: 40px;
     padding: 5px;
     width: $cell-width;
     height: 100%;
     border: 1px solid #e2e3e3;
     border-top: 0;
-    border-left:0;
-    background-repeat: 0;
-    color:#111;
+    border-left: 0;
+    color: #111;
     white-space: nowrap;
     outline: none;
 
-    &.selected{
-      border:none;
+
+    &.selected {
+      border: none;
       outline: 2px solid $primary-color;
-      z-index:2
+      z-index: 2;
     }
   }
-  .col-resize, .row-resize{
+
+  .col-resize, .row-resize {
     position: absolute;
-    right: 0;
     bottom: 0;
-    opacity: 0;
+    right: 0;
     background: $primary-color;
+    opacity: 0;
     z-index: 1000;
-    &:hover{
+
+    &:hover {
       opacity: 1!important;
     }
   }
 
-  .col-resize{
+  .col-resize {
     top: 0;
     width: 4px;
 
-    &:hover{
+    &:hover {
       cursor: col-resize;
     }
   }
 
-  .row-resize{
+  .row-resize {
     left: 0;
     height: 4px;
 
-    &:hover{
+    &:hover {
       cursor: row-resize;
     }
   }
+
 }
