--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,27 +1,28 @@
-@mixin button($color:green){
-  height: 25px;
+@mixin button($color: green) {
+  height: 24px;
   min-width: 24px;
   padding: 3px;
-  text-align: center; 
+  text-align: center;
   position: relative;
   display: inline-block;
-  color: rgba(0,0,0,.7);
+  color: rgba(0, 0, 0, .7);
 
-  &>i{
+  & i {
     font-size: 18px;
   }
 
-  &:active, &active{
-    color:$color;
+  &:active, &.active {
+    color: $color;
   }
 
-  &:hover{
+  &:hover {
     background: #eee;
-    cursor:pointer;
+    cursor: pointer;
   }
 }
 
-@mixin clear-list(){
+
+@mixin clear-list() {
   list-style: none;
   margin: 0;
   padding: 0;
