--- a/src/scss/formula.scss
+++ b/src/scss/formula.scss
@@ -1,29 +1,31 @@
 @import "variables";
 @import "mixins";
 
-.excel__formula{
+
+.excel__formula {
   position: absolute;
   left: 0;
   right: 0;
-  top: $header-height+$toolbar-height;
+  top: $header-height + $toolbar-height;
   height: $formula-height;
   display: flex;
   align-items: center;
   border-bottom: 1px solid $border-color;
 
-  .info{
+  .info {
     font-size: 18px;
-    text-align: center;
     font-style: italic;
+    text-align: center;
     border-right: 1px solid $border-color;
     min-width: $info-cell-width;
   }
-  .input{
+
+  .input {
     padding: 4px;
     font-size: 12px;
     outline: none;
     width: 100%;
     height: 100%;
-    color:#000
+    color: #000;
   }
 }
