--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -24,7 +24,7 @@
     outline: none;
 
     &:hover {
-      border: 1px solid $border-color ;
+      border: 1px solid $border-color;
     }
 
     &:focus {
@@ -32,7 +32,7 @@
     }
   }
 
-  & .button {
+  .button {
     @include button(red);
   }
 
