--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -1,18 +1,18 @@
 @import "variables";
 @import "mixins";
 
-.excel__toolbar{
+.excel__toolbar {
   position: absolute;
   left: 0;
   right: 0;
   top: $header-height;
   height: $toolbar-height;
-  border-top:1px solid $border-color;
-  border-bottom :1px solid $border-color;
+  border-top: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
   padding: 7px 10px;
-  display: flex; 
+  display: flex;
 
-  .button{
-    @include button(green)
+  .button {
+    @include button(green);
   }
 }
